# OpenCV

./: CMakeLists.txt  README.md  imgcap.sln
export/: CMakeLists.txt  gpiotest.txt  main.cpp  mainv2.cpp  overlay.7z  report.docx
imgcap/: imgcap.vcxproj  main.cpp
