cmake_minimum_required(VERSION 3.0)
#set(CMAKE_CXX_FLAGS "-std=gnu++11 -Wall -fsigned-char -W -Wall -Werror=return-type -Werror=non-virtual-dtor -Werror=address -Werror=sequence-point -Wformat -Werror=format-security -Wmissing-declarations -Wundef -Winit-self -Wpointer-arith -Wshadow -Wsign-promo -Wno-narrowing -Wno-delete-non-virtual-dtor -fdiagnostics-show-option -pthread -fomit-frame-pointer -ffunction-sections -fvisibility=hidden -fvisibility-inlines-hidden -O3")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_RELEASE_FLAGS} -std=c++11 -Ofast")
set(CMAKE_INSTALL_PREFIX "/usr")
set(CMAKE_BUILD_TYPE release)
#include_directories(/usr/local/include/opencv)
#include_directories(/usr/local/include/opencv2)
include_directories(/usr/local/include)
LINK_DIRECTORIES(/usr/local/lib /usr/lib)
add_executable(addOverlay main.cpp)
file(GLOB libs /usr/local/lib/lib*)
#target_link_libraries(STC -Ofast libopencv_core.so libopencv_imgproc.so libopencv_highgui.so libopencv_videoio.so libarmadillo.so)
target_link_libraries(STC -Ofast -lopencv_core -lopencv_imgproc -lopencv_highgui -lopencv_videoio -lopenblas -larmadillo -lwiringPi)
install_programs(/bin FILES addOverlay)