cmake_minimum_required(VERSION 3.0)
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_RELEASE_FLAGS} -std=c++11 -Ofast")
set(CMAKE_INSTALL_PREFIX "/usr")
set(CMAKE_BUILD_TYPE release)
include_directories(/usr/local/include)
LINK_DIRECTORIES(/usr/local/lib /usr/lib)
add_executable(addOverlay main.cpp)
file(GLOB libs /usr/local/lib/lib*)
target_link_libraries(addOverlay -Ofast -lopencv_core -lopencv_imgproc -lopencv_highgui -lopencv_videoio -lwiringPi)
install_programs(/bin FILES addOverlay)